fix: Fixed bug in filter options A change was made to the css to prevent the search area from breaking on mobile devices. The second search input moves under the first when the screen size is smaller than 480px. Items directly under the filter options bar are now centered.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@
 * {
   box-sizing: border-box;
 }
-
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -111,9 +110,10 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 60px;
   background-color: #3397DB;
   align-items: center;
+  padding-top: 10px;
 }
 .filter-options h2 {
   color: white;
@@ -127,7 +127,7 @@ nav h1 a {
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
   font-size: 11pt;
-  height: 35px;
+  height: 48px;
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
@@ -306,4 +306,24 @@ nav h1 a {
   #reviews-list li {
     margin: auto;
   }
+  #restaurants-list {
+    width: 100%;
+  }
+  #restaurants-list li {
+    margin: 15px auto;
+    width: 100%;
+  }
+}
+
+/* Prevent filter results from breaking*/
+@media screen and (max-width: 480px) {
+  .filter-options {
+    height: auto;
+    padding-bottom: 10px;
+  }
+  .filter-options select {
+    display: block;
+    margin: 20px auto;
+  }
+  
 }
